хз вроде работает

--- a/redflex/app.json
+++ b/redflex/app.json
@@ -22,7 +22,8 @@
       }
     },
     "web": {
-      "favicon": "./app/assets/favicon.png"
+      "favicon": "./app/assets/favicon.png",
+      "bundler": "metro"
     }
   }
 }
