--- a/redflex/package.json
+++ b/redflex/package.json
@@ -13,7 +13,7 @@
 		"@react-navigation/native-stack": "6.9.17",
 		"expo": "51.0.39",
 		"expo-status-bar": "~1.12.1",
-		"nativewind": "^4.1.23",
+		"nativewind": "4.0.1",
 		"react": "18.2.0",
 		"react-hook-form": "^7.53.2",
 		"react-native": "0.74.5",
@@ -21,12 +21,13 @@
 		"react-native-gesture-handler": "~2.16.1",
 		"react-native-reanimated": "~3.10.1",
 		"react-native-safe-area-context": "4.10.5",
-		"react-native-screens": "3.31.1",
-		"tailwindcss": "^3.4.14",
+		"react-native-screens": "~3.29.0",
+		"tailwindcss": "3.3.2",
 		"typescript": "5.3.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
+		"@babel/preset-env": "^7.26.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/react": "~18.2.45",
 		"@types/react-native": "^0.72.8",
