--- a/redflex/package.json
+++ b/redflex/package.json
@@ -21,7 +21,7 @@
 		"react-native-gesture-handler": "~2.16.1",
 		"react-native-reanimated": "~3.10.1",
 		"react-native-safe-area-context": "4.10.5",
-		"react-native-screens": "~3.29.0",
+		"react-native-screens": "3.31.1",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.3.3"
 	},
