--- a/redflex/package.json
+++ b/redflex/package.json
@@ -11,7 +11,9 @@
 	"dependencies": {
 		"@react-navigation/native": "6.1.9",
 		"@react-navigation/native-stack": "6.9.17",
+		"clsx": "^2.1.1",
 		"expo": "51.0.39",
+		"expo-linear-gradient": "~13.0.2",
 		"expo-status-bar": "~1.12.1",
 		"nativewind": "4.0.1",
 		"react": "18.2.0",
