--- a/redflex/package.json
+++ b/redflex/package.json
@@ -17,6 +17,7 @@
 		"babel-plugin-inline-dotenv": "^1.7.0",
 		"clsx": "^2.1.1",
 		"expo": "51.0.39",
+		"expo-blur": "~13.0.2",
 		"expo-linear-gradient": "~13.0.2",
 		"expo-secure-store": "~13.0.2",
 		"expo-splash-screen": "~0.27.7",
@@ -29,6 +30,7 @@
 		"react-native-classnames": "^0.1.1",
 		"react-native-gesture-handler": "~2.16.1",
 		"react-native-reanimated": "~3.10.1",
+		"react-native-render-html": "^6.3.4",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1",
 		"react-native-toast-message": "^2.2.1",
