--- a/redflex/package.json
+++ b/redflex/package.json
@@ -17,6 +17,7 @@
 		"babel-plugin-inline-dotenv": "^1.7.0",
 		"clsx": "^2.1.1",
 		"expo": "51.0.39",
+		"expo-av": "~14.0.7",
 		"expo-blur": "~13.0.2",
 		"expo-linear-gradient": "~13.0.2",
 		"expo-secure-store": "~13.0.2",
