add admin nav, pop movies, countUsers hamburger

--- a/redflex/tsconfig.json
+++ b/redflex/tsconfig.json
@@ -11,6 +11,7 @@
 			"@screens/*": ["components/screens/*"],
 
 			"@/hooks/*": ["hooks/*"],
+			"@/navigation/*": ["navigation/*"],
 			"@/shared/*": ["shared/*"],
 			"@/config/*": ["config/*"],
 			"@/services/*": ["services/*"],
