--- a/redflex/package.json
+++ b/redflex/package.json
@@ -19,6 +19,7 @@
 		"expo": "51.0.39",
 		"expo-av": "~14.0.7",
 		"expo-blur": "~13.0.2",
+		"expo-checkbox": "~3.0.0",
 		"expo-linear-gradient": "~13.0.2",
 		"expo-secure-store": "~13.0.2",
 		"expo-splash-screen": "~0.27.7",
@@ -30,11 +31,13 @@
 		"react-native-async-storage": "^0.0.1",
 		"react-native-classnames": "^0.1.1",
 		"react-native-gesture-handler": "~2.16.1",
+		"react-native-pell-rich-editor": "^1.9.0",
 		"react-native-reanimated": "~3.10.1",
 		"react-native-render-html": "^6.3.4",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1",
 		"react-native-toast-message": "^2.2.1",
+		"react-native-webview": "13.8.6",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.3.3"
 	},
