MovieEdit. to fix telegram

--- a/redflex/package.json
+++ b/redflex/package.json
@@ -20,6 +20,7 @@
 		"expo-av": "~14.0.7",
 		"expo-blur": "~13.0.2",
 		"expo-checkbox": "~3.0.0",
+		"expo-image-picker": "~15.0.7",
 		"expo-linear-gradient": "~13.0.2",
 		"expo-secure-store": "~13.0.2",
 		"expo-splash-screen": "~0.27.7",
@@ -30,6 +31,7 @@
 		"react-native": "0.74.5",
 		"react-native-async-storage": "^0.0.1",
 		"react-native-classnames": "^0.1.1",
+		"react-native-dropdown-picker": "^5.4.6",
 		"react-native-gesture-handler": "~2.16.1",
 		"react-native-pell-rich-editor": "^1.9.0",
 		"react-native-reanimated": "~3.10.1",
