1-9 labs reports + 7-9 labs

--- a/redflex/tsconfig.json
+++ b/redflex/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"extends": "expo/tsconfig.base",
+	"exclude": ["app/tests/**/*.test.ts"],
 	"compilerOptions": {
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
