--- a/redflex/package.json
+++ b/redflex/package.json
@@ -6,13 +6,19 @@
 		"start": "expo start",
 		"android": "expo start -c --android",
 		"ios": "expo start -c --ios",
-		"web": "expo start --web"
+		"web": "expo start --web",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "^1.23.1",
 		"@react-navigation/native": "6.1.9",
 		"@react-navigation/native-stack": "6.9.17",
 		"@tanstack/react-query": "^5.61.0",
+		"@tanstack/react-query-persist-client": "^5.61.0",
+		"@tanstack/query-persist-client-core": "^5.61.0",
+		"@tanstack/query-async-storage-persister": "^5.61.0",
 		"axios": "^1.7.7",
 		"babel-plugin-inline-dotenv": "^1.7.0",
 		"clsx": "^2.1.1",
@@ -41,16 +47,32 @@
 		"react-native-toast-message": "^2.2.1",
 		"react-native-webview": "13.8.6",
 		"tailwindcss": "3.3.2",
-		"typescript": "5.3.3"
+		"typescript": "5.3.3",
+		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
+		"@babel/plugin-transform-runtime": "^7.23.7",
 		"@babel/preset-env": "^7.26.0",
+		"@babel/preset-typescript": "^7.23.3",
+		"@babel/runtime": "^7.23.7",
+		"@testing-library/jest-native": "^5.4.3",
+		"@testing-library/react-native": "^12.4.3",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/jest": "^29.5.11",
 		"@types/react": "~18.2.45",
 		"@types/react-native": "^0.72.8",
+		"@types/lodash": "^4.14.202",
+		"@types/react-test-renderer": "^18.0.7",
+		"babel-jest": "^29.7.0",
 		"babel-plugin-root-import": "^6.6.0",
-		"prettier": "^3.3.3"
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jest-expo": "^50.0.1",
+		"msw": "^2.1.5",
+		"prettier": "^3.3.3",
+		"react-test-renderer": "18.2.0",
+		"ts-jest": "^29.1.1"
 	},
 	"private": true
 }
